08-deploy-wordpress.yml
apiVersion: v1
kind: Service
metadata:
  namespace: wordpress
  name: wordpress
  labels:
    app: wordpress
spec:
  selector:
    app: wordpress
    tier: frontend
  ports:
    - port: 80
  # type: NodePort
  # ports:
  #   - targetPort: 80
  #     port: 80
  #     nodePort: 32313
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: wordpress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod-wp
    # acme.cert-manager.io/http01-edit-in-place: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: wordpress
spec:
  tls:
  - hosts:
    # - "*.ddc-k8s.ml" # wildcard only works with dns01 solver config in the cluster-issuer, this requires DNS provider API keys. 
                           # See: https://cert-manager.io/docs/configuration/acme/dns01/#supported-dns01-providers, https://cert-manager.io/docs/configuration/acme/dns01/cloudflare/
    - web.ddc-k8s.ml
    secretName: letsencrypt-prod-wp
  rules:
  - host: www.web.ddc-k8s.ml
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress
            port:
              number: 80
  - host: web.ddc-k8s.ml
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress
            port:
              number: 80
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  namespace: wordpress
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - image: wordpress:beta-php8.1-apache
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
          subPath: wordpress
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wordpress-pv-claim
